--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -847,6 +847,7 @@
   <script src="js/src/map/map_city_locations.js"></script>
   <script src="js/src/connecter/connecter.js"></script>
   <script src="js/src/notifications/notifications.js"></script>
+  <script src="js/src/notifications/notifications_test.js"></script>
   <script src="js/src/onboarding/onboarding.js"></script> 
   <script src="js/src/seek/seek.js"></script>
   <script src="js/src/profile/profile.js"></script>
