--- a/public/css/src/cheers/cheers.css
+++ b/public/css/src/cheers/cheers.css
@@ -204,3 +204,20 @@
     margin: auto;
     margin-bottom: 136px;
 }
+ 
+.cheers-title {
+    font-family: 'creamy';
+    font-size: 38px;
+}
+
+.cheers-title h3 {
+
+}
+
+.cheers-subtitle {font-size: 12px;}
+
+.cheers-subtitle span {
+
+}
+
+
