--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -174,7 +174,7 @@ Whispereen  : #58c170
     margin-left: 20px;
 }
  
-.notification .notification-message__text {font-weight: 700;font-size: 13.5px;letter-spacing: -.2px;max-width: 200px;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;line-height: 14px;}
+.notification .notification-message__text {font-weight: 700;font-size: 13.5px;letter-spacing: -.2px;max-width: 200px;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;line-height: 14px;color: #1b69ec;}
 
 .notification .notification-message__subtext {
     font-size: 11px;
@@ -195,6 +195,7 @@ Whispereen  : #58c170
     position: relative;
     top: -25px;
     flex-shrink: 0;
+    color: #1b69ec;
 }
 
 .notification .notification__icon {
@@ -221,6 +222,7 @@ Whispereen  : #58c170
 .notification.x--clicked .notification-message__text {
     font-weight: 500;
     height: 15px;
+    color: #454545;
 }
 
 .notification.x--clicked .notification-message__subtext {
@@ -228,7 +230,8 @@ Whispereen  : #58c170
 }
 
 .notification.x--clicked .notification__date {
-    font-weight: 400
+    font-weight: 400;
+    color: #454545;
 }
 .notification.x--clicked .notification__icon {
     color: #ccc;
