--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -390,7 +390,13 @@
 
        <!-- Cheers begin -->
       <section class="menu-section x--cheers" data-link="cheers">
-        <div class="segment">
+        <div class="cheers-title">
+          <h3 data-lid="cheers_title"></h3>
+        </div>
+        <div class="cheers-subtitle">
+          <span data-lid="cheers_subtitle"></span>
+        </div>
+        <div class="segment nonei">
           <div class="segment__part" data-link="received">
             <h3 data-lid="segment_cheers_received"></h3>
           </div>
