refactoring and bug fixes 2

--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -51,7 +51,9 @@
     padding-top: 30px;
 }
 
-.menu-section .empty {}
+.menu-section .empty {
+    display: flex;
+}
 
 .menu-item {
     display: flex;
