--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -453,6 +453,14 @@ span.be-dates__count {
     color: white;
 }
 
+.be-action .check-cheers {
+    min-width: 180px;
+    height: 40px;
+    border-radius: 100px;
+    background: #db4760;
+    font-size: 13px;
+}
+
 .be-action button.x--pending {
     color: white;
     border: 2px solid;
