--- a/public/css/src/cheers/cheers.css
+++ b/public/css/src/cheers/cheers.css
@@ -15,7 +15,6 @@
     min-height: 280px;
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 30px;
 }
 
 .cheers__item {
@@ -207,7 +206,8 @@
  
 .cheers-title {
     font-family: 'creamy';
-    font-size: 38px;
+    font-size: 30px;
+    color: #454545;
 }
 
 .cheers-title h3 {
@@ -220,4 +220,20 @@
 
 }
 
+.empty__btn {width: 200px;height: 40px;margin-top: 30px;}
+.empty__btn button {
+    width: 100%;
+    height: 100%;
+    background: #1b69ec;
+    color: white;
+    border-radius: 110px;
+    font-size: 15px;
+    font-family: 'quenda';
+    line-height: 11px;
+    justify-content: center;
+}
+
+.empty__btn button:hover {
+    opacity: .8!important;
+}
 
