--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -112,3 +112,4 @@
 .icon-female:before { content: '\e86e'; } /* '' */
 .icon-chat-read-empty:before { content: '\e86f'; } /* '' */
 .icon-switch-empty:before { content: '\e870'; } /* '' */
+.icon-heart-empty:before { content: '\e871'; } /* '' */
