--- a/public/css/lib/fontello/css/fontello.css
+++ b/public/css/lib/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?12011140');
-  src: url('../font/fontello.eot?12011140#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?12011140') format('woff2'),
-       url('../font/fontello.woff?12011140') format('woff'),
-       url('../font/fontello.ttf?12011140') format('truetype'),
-       url('../font/fontello.svg?12011140#fontello') format('svg');
+  src: url('../font/fontello.eot?38094258');
+  src: url('../font/fontello.eot?38094258#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?38094258') format('woff2'),
+       url('../font/fontello.woff?38094258') format('woff'),
+       url('../font/fontello.ttf?38094258') format('truetype'),
+       url('../font/fontello.svg?38094258#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?12011140#fontello') format('svg');
+    src: url('../font/fontello.svg?38094258#fontello') format('svg');
   }
 }
 */
@@ -168,3 +168,4 @@
 .icon-female:before { content: '\e86e'; } /* '' */
 .icon-chat-read-empty:before { content: '\e86f'; } /* '' */
 .icon-switch-empty:before { content: '\e870'; } /* '' */
+.icon-heart-empty:before { content: '\e871'; } /* '' */
