--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -981,8 +981,9 @@ button:hover {
 .app-nav.x--thumbnail {
     width: 130px;
     position: absolute;
-    left: -130px;
+    left: -140px;
     top: -10px;
+    justify-content: flex-end;
 }
 
 .app-nav ul {
@@ -994,7 +995,7 @@ button:hover {
 .app__menu-item {
     display: inline-block;
     font-size: 16px;
-    width: 60px;
+    width: 50px;
     height: 52px;
     text-align: center;
     position: relative;
