maskage des notifs outdated

--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -268,7 +268,7 @@ Whispereen  : #58c170
 }
 
 
-.notification.x--outdated {opacity: .3;cursor: default;}
+.notification.x--outdated {opacity: .3;cursor: default;display: none;}
 
 
 @media (max-width: 650px ){
