--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -145,12 +145,32 @@
     flex-flow: row nowrap;
     align-items: center;
     height: 90px;
-    /* background: #eee; */
     cursor: pointer;
     border-bottom: 1px solid #eee;
     position: relative;
     width: 100%;
     box-sizing: border-box;
+}
+
+.chat-row.x--no-match {
+    height: 70px;
+    text-align: center;
+    cursor: default;
+    justify-content: center;
+    color: #ccc;
+    font-size: 11px;
+}
+
+.chat-row.x--no-match:hover {
+    background: white;
+}
+
+.chat-rows-body:last-of-type .x--no-match{
+    border-bottom: none;
+}
+
+.chat-row.x--no-match span {
+
 }
 
 .chat-row .user-online {width: 12px;height: 12px;position: relative;top: -1px;left: -6px;}
@@ -185,19 +205,25 @@
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
+    position: relative;
 }
 
 .chat-rows-title, .notification--header {
-    background: #f1f1f1;
+    /* background: #f1f1f1; */
     color: #676767;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #eee;
     padding: 8px 10px;
     width: 100%;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 14px;
+    color: #1b69ec;
+    font-family: 'quenda';
 }
 
-.chat-rows-title span {}
+.chat-rows-title span {
+    position: relative;
+    top: 1px;
+}
 
 
 /*.chat-row-date {
@@ -238,14 +264,15 @@
     color: #191919;
     font-weight: 600;
 }*/
-
+ 
 .chat-row-pictures {
     display: flex;
     width: 70px;
     flex-shrink: 0;
     height: 70px;
-    margin-left: 30px;
+    margin-left: 20px;
     position: relative;
+    border-radius: 100px;
 }
 
 .chat-row-pictures > img {
@@ -263,8 +290,19 @@
     color: #454545;
 }
 
+.chat-row-infos__h1 {
+    font-family: 'creamy';
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.chat-row-infos__h2 {
+    font-size: 11px;
+    line-height: 20px;
+}
+
 .chat-row-infos__name {
-    margin-bottom: 5px;
+    margin-bottom: 4px;
     font-size: 14px;
 }
 
@@ -280,6 +318,8 @@
     white-space: nowrap;
     max-width: 240px;
     display: inline-block;
+    /* font-family: 'quenda'; */
+    /* font-size: 15px; */
 }
 
 .chat-row-infos__preview {
@@ -288,7 +328,7 @@
     white-space: nowrap;
     max-width: 230px;
     color: #454545;
-    font-size: 11px;
+    font-size: 11.5px;
     height: 14px;
 }
 
@@ -393,9 +433,6 @@
 
 .chat-empty__title {
     font-size: 28px;
-    color: #454545;
-    margin-top: 20px;
-    /* font-weight: 600; */
     font-family: 'creamy';
     color: #1b69ec;
 }
@@ -410,6 +447,8 @@
     font-weight: 400;
     font-size: 12px;
 }
+
+.chat-empty__subtitle {}
 
 .chat-empty__subtitle span {}
 
@@ -480,5 +519,13 @@
 
 .chat-inview-group .be-action button.x--validating {
     opacity: .5;
+}
+
+.chat-row.x--no-match .chat-row__icon {
+    font-size: 40px;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    color: #ccc;
 }
 
