--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -85,6 +85,10 @@
     left: 8px;
 }
 
+.cheers-back .chat-inview__icon.x--previous {
+    margin-top: 23px;
+}
+
 .chat-inview__icon.x--close {
     right: 8px;
     font-size: 14px;
@@ -117,6 +121,8 @@
     font-size: 13px;
     margin-bottom: 5px;
     letter-spacing: -.3px;
+    font-family: 'quenda';
+    font-size: 16px;
 }
 
 .chat-inview-title__h2 {
@@ -506,12 +512,14 @@
     height: 38px;
     display: flex;
     font-size: 11px;
-    color: #676767;
+    color: #1b69ec;
     padding-right: 16px;
     justify-content: flex-end;
     align-items: center;
-    background: #eee;
     font-weight: 600;
+    font-family: 'quenda';
+    font-size: 13px;
+    border-bottom: 1px solid #eee;
 }
 
 .chat-inview-users__group i {}
