--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -56,7 +56,8 @@
     padding: 2px;
     color: white;
     right: 20px;
-    font-size: 24px;
+    font-size: 20px;
+    top: 80px;
 }
 
 .map__icon.x--filter-dates {
