--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -174,10 +174,10 @@ Whispereen  : #58c170
     margin-left: 20px;
 }
  
-.notification .notification-message__text {font-weight: 700;font-size: 13.5px;letter-spacing: -.2px;max-width: 200px;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;line-height: 14px;color: #454545;/* color: #1b69ec; */}
+.notification .notification-message__text {font-weight: 700;font-size: 13.5px;letter-spacing: -.2px;max-width: 200px;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;line-height: 14px;color: #454545;/* color: #1b69ec; *//* font-family: 'quenda'; *//* font-size: 15px; */}
 
 .notification .notification-message__subtext {
-    font-size: 11px;
+    font-size: 11.5px;
     margin-top: 6px;
     color: #454545;
     text-overflow: ellipsis;
