--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -13,8 +13,8 @@
 } 
 
 .search__title {
-    font-family: 'creamy';
-    font-size: 22px;
+    font-family: 'quenda';
+    font-size: 15px;
     display: none;
     position: relative;
     top: 2px;
