--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -766,6 +766,7 @@
   <script src="js/src/map/map_styles.js"></script>
   <script src="js/src/map/map_markers_url.js"></script>
   <script src="js/src/map/map_city_locations.js"></script>
+  <script src="js/src/map/marker_factory.js"></script>
   <script src="js/src/connecter/connecter.js"></script>
   <script src="js/src/notifications/notifications.js"></script>
   <script src="js/src/notifications/notifications_test.js"></script>
