--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -2,8 +2,8 @@
     display: none;
     position: fixed;
     right: 0px;
-    top: 58px;
-    z-index: 100;
+    top: 59px;
+    z-index: 101;
     background: #fff;
     width: 420px;
     box-sizing: border-box;
@@ -173,7 +173,7 @@
 
 }
 
-.chat-row .user-online {width: 12px;height: 12px;position: relative;top: -1px;left: -6px;}
+.chat-row .user-online {width: 12px;height: 12px;position: relative;left: -6px;}
 
 .chat-row.x--loading {
     opacity: .5;
@@ -304,6 +304,7 @@
 .chat-row-infos__name {
     margin-bottom: 4px;
     font-size: 14px;
+    display: flex;
 }
 
 .chat-row-infos-name span {}
