--- a/public/css/src/search/search_filters.css
+++ b/public/css/src/search/search_filters.css
@@ -33,8 +33,9 @@
 .search-filters-section__title {
     font-size: 13px;
     font-weight: 700;
-    padding-left: 20px;
+    padding-left: 10px;
     padding-bottom: 10px;
+    font-family: 'quenda';
 }
 
 .search-filters-section.x--countries .search-filters-section__title {
